Setting current locale according to logged in user's preferences